--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,3 @@
-@import "tailwindcss";
-/* You can add global styles to this file, and also import other style files */
-
 html,
 body {
     height: 100%;
@@ -8,13 +5,6 @@ body {
 
 body {
     margin: 0;
+    /* fuente por default */
     font-family: 'Inter', sans-serif;
-}
-
-
-
-@theme {
-    --color-verde-oscuro: #4F8A5B;
-    /* verde oscuro */
-    --color-gris: #808D99;
 }
