--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
@@ -1,5 +1,8 @@
+<img src="/assets/imagen-principal.png" alt="Logo" class="principal-image" aria-label="logo-restock">
+
 <div class="plans-container">
     <div class="plans-header">
+
         <h2>FLEXIBLE PLANS TO TAKE YOUR RESTAURANT MANAGEMENT</h2>
         <h3>TO THE NEXT LEVEL</h3>
     </div>
