--- a/src/app/public/components/navbar/navbar.component.css
+++ b/src/app/public/components/navbar/navbar.component.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     height: 64px;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(204, 201, 201, 0);
     z-index: 1000;
     display: flex;
     align-items: end;
@@ -13,5 +13,5 @@
 }
 
 .content {
-    color: white;
+    color: rgb(176, 170, 170);
 }
