--- a/src/app/public/components/sidebar/sidebar.component.css
+++ b/src/app/public/components/sidebar/sidebar.component.css
@@ -1,16 +1,19 @@
 mat-sidenav-container {
   height: 100vh;
   display: block;
-  background-color: #f5f5f5;
+
+  box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.5);
+  z-index: 20;
 }
 
 .sidenav {
-  width: 240px;
+  width: 330px;
   background-color: #ffffff;
-  padding: 1.5rem 1.2rem;
+  padding: 1.5rem 0rem 1.5rem 1.2rem;
   display: flex;
   flex-direction: column;
 }
+
 
 .logo-section {
   display: flex;
@@ -37,14 +40,14 @@ mat-sidenav-container {
   align-items: center;
   background-color: #f1f5f9;
   border-radius: 12px;
-  padding: 0.75rem;
-  margin-bottom: 2rem;
+  padding: 1.3rem 0rem 1.3rem 0.9rem;
+  margin: 1rem 1rem 1rem 0rem;
   gap: 0.75rem;
 }
 
 .user-photo {
-  width: 42px;
-  height: 42px;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
 }
 
@@ -56,7 +59,7 @@ mat-sidenav-container {
 }
 
 .user-email {
-  font-size: 0.65rem;
+  font-size: 15px;
   font-family: 'Inter', sans-serif;
   color: #808D99;
   margin: 0;
@@ -66,19 +69,35 @@ mat-nav-list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-left: 1.3rem;
 }
 
 .menu-item {
   display: flex;
   align-items: center;
   gap: 0.75rem;
-  padding: 0.6rem 0.8rem;
+  padding: 0.5rem 0.8rem;
   border-radius: 8px;
   text-decoration: none;
   color: #808D99;
   font-family: 'Inter', sans-serif;
   font-size: 0.95rem;
   transition: background-color 0.2s ease;
+}
+
+@media (min-height: 900px) {
+  .menu-item {
+    padding: 0.9rem 0.8rem;
+  }
+
+  mat-nav-list {
+    margin-top: 4rem;
+  }
+
+  .menu-label {
+    font-size: 23px;
+  }
+
 }
 
 .menu-item:hover {
