--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.css
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.css
@@ -1,8 +1,14 @@
 .plans-container {
-    max-width: 1200px;
-    /* margin: 50px auto; */
+    /* Limita el ancho en pantallas muy grandes */
+    margin-left: auto;
+    /* Centrado horizontal */
+    margin-right: auto;
+    /* padding-left: 16px; */
+    /* Padding interno responsivo */
+    /* padding-right: 16px; */
     text-align: center;
 }
+
 
 .plans-header h2,
 .plans-header h3 {
@@ -21,7 +27,7 @@
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-top: 40px;
+    margin-top: 50px;
     flex-wrap: wrap;
 }
 
@@ -29,7 +35,11 @@
     width: 300px;
     position: relative;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
 }
+
+
+
 
 .plan-card mat-card-title {
     font-size: 22px;
@@ -83,5 +93,8 @@
 
 .principal-image {
     width: 100%;
+    max-width: 100%;
     height: auto;
+    object-fit: cover;
+    margin-bottom: 32px;
 }
