feat(subscription): add subscription css.

--- a/src/app/public/layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/public/layout/dashboard-layout/dashboard-layout.component.html
@@ -1,11 +1,13 @@
 <app-navbar></app-navbar>
 
 
-<div class="flex">
+<div class="layout">
     <app-sidebar></app-sidebar>
 
     <main class="content">
         <!--<router-outlet> es el lugar donde Angular inyecta el componente activo de la ruta. Es imprescindible en aplicaciones SPA que usan rutas.-->
         <router-outlet />
+        <app-footer></app-footer>
+
     </main>
 </div>
