--- a/src/app/public/layout/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/public/layout/dashboard-layout/dashboard-layout.component.css
@@ -1,7 +1,20 @@
-.flex {
+.layout {
     display: flex;
 }
 
+app-sidebar {
+    position: fixed;
+    top: 0px;
+    /* altura del navbar si existe */
+    left: 0;
+    z-index: 20;
+}
+
+
 .content {
-    width: 100%;
+    margin-left: 330px;
+    /* Igual al ancho del sidebar */
+    width: calc(100% - 330px);
+    min-height: calc(100vh - 64px);
+    margin-bottom: 1rem;
 }
