--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.css
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.css
@@ -20,20 +20,22 @@
 }
 
 .plans-header h3 {
-    margin-top: 10px;
+    margin-top: 7px;
 }
 
 .plans-grid {
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-top: 50px;
+    margin-top: 60px;
     flex-wrap: wrap;
 }
 
 .plan-card {
     text-align: center;
     background-color: white;
+    position: relative;
+    overflow: hidden;
     width: 345px;
     height: 435px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -112,13 +114,17 @@ mat-card-content {
 
 .popular-label {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 12px;
+    right: -40px;
+    /* mueve hacia afuera para que al rotar quede dentro */
     background-color: #4F8A5B;
     color: white;
     font-size: 11px;
-    padding: 4px 8px;
-    border-bottom-left-radius: 5px;
+    padding: 4px 40px;
+    border-radius: 0;
+    transform: rotate(45deg);
+    font-weight: bold;
+    z-index: 2;
 }
 
 .principal-image {
@@ -127,4 +133,11 @@ mat-card-content {
     height: auto;
     object-fit: cover;
     margin-bottom: 32px;
+}
+
+.highlight-card {
+    background-color: #F4F4F4;
+    margin-top: -30px;
+    z-index: 1;
+    position: relative;
 }
