--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
@@ -8,7 +8,8 @@
 
     <div class="plans-grid">
         @for (plan of plans; track plan) {
-        <mat-card class="plan-card" appearance="outlined">
+        <!-- ngClass para expresiones condicionales. -->
+        <mat-card class="plan-card" [ngClass]="{'highlight-card': plan.popular }" appearance="outlined">
 
             @if (plan.popular) {
             <div class="popular-label">POPULAR</div>
