--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
@@ -6,32 +6,7 @@
         <h3>TO THE NEXT LEVEL</h3>
     </div>
 
-    <div class="plans-grid">
-        @for (plan of plans; track plan) {
-        <!-- ngClass para expresiones condicionales. -->
-        <mat-card class="plan-card" [ngClass]="{'highlight-card': plan.popular }" appearance="outlined">
+    <!-- aca va el compoente subscription-cards -->
+    <app-subscriptions-cards />
 
-            @if (plan.popular) {
-            <div class="popular-label">POPULAR</div>
-            }
-
-            <mat-card-header class="mat-card-header">
-                <mat-card-title>{{ plan.name }}</mat-card-title>
-                <mat-card-subtitle>{{ plan.price }}</mat-card-subtitle>
-            </mat-card-header>
-
-            <mat-card-content>
-                <ul>
-                    @for (feature of plan.features; track feature) {
-                    <li>{{ feature }}</li>
-                    }
-                </ul>
-            </mat-card-content>
-
-            <mat-card-actions>
-                <button mat-raised-button class="subscribe-button">SUBSCRIBE</button>
-            </mat-card-actions>
-        </mat-card>
-        }
-    </div>
 </div>
