--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.html
@@ -6,7 +6,7 @@
         <h3>TO THE NEXT LEVEL</h3>
     </div>
 
-    <!-- aca va el compoente subscription-cards -->
-    <app-subscriptions-cards />
+    <!-- compoente subscription-cards -->
+    <app-subscriptions-cards [subscriptions]="subscriptions" />
 
 </div>
