--- a/src/app/subscription/components/subscriptions-cards/subscriptions-cards.component.html
+++ b/src/app/subscription/components/subscriptions-cards/subscriptions-cards.component.html
@@ -1,20 +1,20 @@
 <div class="plans-grid">
-    @for (plan of plans; track plan) {
+    @for (subscription of subscriptions; track subscription) {
     <!-- ngClass para expresiones condicionales. -->
-    <mat-card class="plan-card" [ngClass]="{'highlight-card': plan.popular }" appearance="outlined">
+    <mat-card class="plan-card" [ngClass]="{'highlight-card': subscription.popular }" appearance="outlined">
 
-        @if (plan.popular) {
+        @if (subscription.popular) {
         <div class="popular-label">POPULAR</div>
         }
 
         <mat-card-header class="mat-card-header">
-            <mat-card-title>{{ plan.name }}</mat-card-title>
-            <mat-card-subtitle>{{ plan.price }}</mat-card-subtitle>
+            <mat-card-title>{{ subscription.name }}</mat-card-title>
+            <mat-card-subtitle>{{ subscription.price }}</mat-card-subtitle>
         </mat-card-header>
 
         <mat-card-content>
             <ul>
-                @for (feature of plan.features; track feature) {
+                @for (feature of subscription.features; track feature) {
                 <li>{{ feature }}</li>
                 }
             </ul>
