--- a/src/app/subscription/pages/subscription-overview/subscription-overview.component.css
+++ b/src/app/subscription/pages/subscription-overview/subscription-overview.component.css
@@ -16,7 +16,7 @@
     font-weight: 400;
     font-size: 34px;
     text-transform: uppercase;
-    margin: 0;
+    margin: 0 20px 0 20px;
 }
 
 .plans-header h3 {
@@ -29,4 +29,18 @@
     height: auto;
     object-fit: cover;
     margin-bottom: 32px;
+}
+
+
+
+@media (max-width: 1405px) {
+
+    .plans-header h2,
+    .plans-header h3 {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 400;
+        font-size: 30px;
+        text-transform: uppercase;
+        /* margin: 0; */
+    }
 }
