feat(subscriptions): add validation and component

--- a/src/app/shared/subscription/components/subscriptions-cards/subscriptions-cards.component.html
+++ b/src/app/shared/subscription/components/subscriptions-cards/subscriptions-cards.component.html
@@ -9,7 +9,7 @@
 
         <mat-card-header class="mat-card-header">
             <mat-card-title>{{ subscription.name }}</mat-card-title>
-            <mat-card-subtitle>{{ subscription.price }}</mat-card-subtitle>
+            <mat-card-subtitle>S/. {{ subscription.price }} / month</mat-card-subtitle>
         </mat-card-header>
 
         <mat-card-content>
