--- a/src/app/Restaurants/public/layout/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/Restaurants/public/layout/dashboard-layout/dashboard-layout.component.html
@@ -2,7 +2,7 @@
 
 
 <div class="layout">
-    <app-sidebar></app-sidebar>
+    <app-sidebar [menu]="menu" />
 
     <main class="content">
         <!--<router-outlet> es el lugar donde Angular inyecta el componente activo de la ruta. Es imprescindible en aplicaciones SPA que usan rutas.-->
