--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -123,7 +123,7 @@ mat-nav-list a:hover {
 }
 
 .language-switcher {
-  margin-top: auto;
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
   padding-top: 1rem;
