--- a/src/app/public/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.html
@@ -5,6 +5,8 @@
     <app-sidebar [menu]="menu" />
 
     <main class="content">
+        <img src="/assets/imagen-principal.png" alt="Logo" class="principal-image" aria-label="logo-restock">
+
         <!--<router-outlet> es el lugar donde Angular inyecta el componente activo de la ruta. Es imprescindible en aplicaciones SPA que usan rutas.-->
         <router-outlet />
 
