--- a/src/app/public/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.css
@@ -1,28 +1,19 @@
-.layout {
-    display: flex;
+.layout-container {
+  height: 100vh;
 }
 
-app-sidebar {
-    position: fixed;
-    top: 0px;
-    /* altura del navbar si existe */
-    left: 0;
-    z-index: 20;
+.sidebar-container {
+  width: 260px;
 }
 
-
-.content {
-    margin-left: 330px;
-    /* Igual al ancho del sidebar */
-    width: calc(100% - 330px);
-    min-height: calc(100vh - 64px);
-    margin-bottom: 1rem;
+.main-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.principal-image {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    margin-bottom: 32px;
+.content-wrapper {
+  padding: 24px;
+  background-color: #fff;
+  min-height: calc(100vh - 64px); /* 64px toolbar height */
 }
