--- a/src/app/public/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.html
@@ -1,14 +1,24 @@
-<app-navbar></app-navbar>
+<mat-sidenav-container class="layout-container">
+  <mat-sidenav
+    #drawer
+    [mode]="isMobile ? 'over' : 'side'"
+    [opened]="!isMobile"
+    [fixedInViewport]="isMobile"
+    fixedTopGap="56"
+    class="sidebar-container"
+  >
+    <app-sidebar [menu]="menu" [user]="user"></app-sidebar>
+  </mat-sidenav>
 
+  <mat-sidenav-content class="main-content">
+    <mat-toolbar color="primary">
+      <button *ngIf="isMobile" mat-icon-button (click)="drawer.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </mat-toolbar>
 
-<div class="layout">
-    <app-sidebar [menu]="menu" />
-
-    <main class="content">
-        <img src="/assets/imagen-principal.png" alt="Logo" class="principal-image" aria-label="logo-restock">
-
-        <!--<router-outlet> es el lugar donde Angular inyecta el componente activo de la ruta. Es imprescindible en aplicaciones SPA que usan rutas.-->
-        <router-outlet />
-
-    </main>
-</div>
+    <div class="content-wrapper">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
