--- a/src/app/Restock/asset-and-resource-management/components/supplier-modal/supplier-modal.component.html
+++ b/src/app/Restock/asset-and-resource-management/components/supplier-modal/supplier-modal.component.html
@@ -28,6 +28,6 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns" />
-    <mat-row *matRowDef="; columns: displayedColumns;" />
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 </div>
