feat(supplier-overview): add supplier overview format.

--- a/src/app/Restock/asset-and-resource-management/pages/supplier-overview/supplier-overview.component.css
+++ b/src/app/Restock/asset-and-resource-management/pages/supplier-overview/supplier-overview.component.css
@@ -34,3 +34,8 @@
   border: 1px solid #ccc;
   text-align: left;
 }
+mat-paginator {
+  background-color: #F4F4F4;
+  border-radius: 4px;
+  width: 100%;
+}
