--- a/src/app/Restock/asset-and-resource-management/pages/reviews/reviews.component.css
+++ b/src/app/Restock/asset-and-resource-management/pages/reviews/reviews.component.css
@@ -1,5 +1,18 @@
 .review-container {
     padding: 16px;
+    box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.2);
+    margin: 3rem;
+    border-radius: 30px;
+
+}
+
+.reviews-quantity {
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 23px;
+    margin-left: 3rem;
+    margin-bottom: 2rem;
+    padding: 0 2rem 0 2rem;
 }
 
 .flex {
@@ -15,6 +28,7 @@
 }
 
 
+
 .full-width-table {
     background-color: white;
 }
@@ -24,10 +38,25 @@
 }
 
 .average-review {
-    text-align: right;
-    font-size: 16px;
-    margin-top: 12px;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
+    margin-top: 3rem;
+    text-align: center;
+    font-family: Poppins;
+    font-weight: 400;
+    font-size: 14px;
+    box-shadow: 1px 0px 8px rgba(0, 0, 0, 0.5);
+    margin-left: auto;
+    width: 20%;
+    border: 2px solid black;
+    /* <-- define grosor, estilo y color del borde */
+    border-radius: 20px;
+    /* <-- redondeado */
+    padding: 5px;
+    /* (opcional) agrega espacio interno para que se vea mejor */
 }
+
+
 
 mat-paginator {
     background-color: white;
