--- a/src/app/Restock/asset-and-resource-management/pages/reviews/reviews.component.html
+++ b/src/app/Restock/asset-and-resource-management/pages/reviews/reviews.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8 review-container">
-    <h2>Calificaciones ({{ dataSource.data.length }})</h2>
+    <h2 class="reviews-quantity"> {{ dataSource.data.length }} Reviews</h2>
 
     <div class="flex">
         <mat-form-field appearance="outline" class="filter-field">
@@ -15,22 +15,22 @@
 
             <!-- Columnas -->
             <ng-container matColumnDef="restaurant">
-                <th mat-header-cell *matHeaderCellDef> Restaurante </th>
+                <th mat-header-cell *matHeaderCellDef> Restaurant </th>
                 <td mat-cell *matCellDef="let row"> {{ row.restaurant }} </td>
             </ng-container>
 
             <ng-container matColumnDef="rating">
-                <th mat-header-cell *matHeaderCellDef> Calificación </th>
+                <th mat-header-cell *matHeaderCellDef> Review </th>
                 <td mat-cell *matCellDef="let row"> {{ row.rating }}/5 </td>
             </ng-container>
 
             <ng-container matColumnDef="comment">
-                <th mat-header-cell *matHeaderCellDef> Comentario </th>
+                <th mat-header-cell *matHeaderCellDef> Comment </th>
                 <td mat-cell *matCellDef="let row"> {{ row.comment }} </td>
             </ng-container>
 
             <ng-container matColumnDef="date">
-                <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                <th mat-header-cell *matHeaderCellDef> Date </th>
                 <td mat-cell *matCellDef="let row"> {{ row.date }} </td>
             </ng-container>
 
@@ -42,6 +42,6 @@
 
 
     <div class="average-review">
-        <strong>Promedio de reviews:</strong> {{ averageReview }}/5
+        <p>Review average: {{ averageReview }}/5</p>
     </div>
 </div>
