--- a/src/app/Restock/asset-and-resource-management/pages/supplier-detail/supplier-detail.component.css
+++ b/src/app/Restock/asset-and-resource-management/pages/supplier-detail/supplier-detail.component.css
@@ -20,9 +20,23 @@
   margin-top: 3rem;
 }
 
-supplier-detail#back-button {
-  background-color: #4F8A5B;
-  color: white;
-  margin-bottom: 1rem;
+.supplier-back-btn {
+  background-color: #4F8A5B !important;
+  color: white !important;
+  border-radius: 2px;
+  padding: 15px;
+}
+.supplier-back-btn-fix {
+  background-color: #4F8A5B !important;
+  color: white !important;
+  border-radius: 50px;
+  padding: 0px;
 }
 
+.btn-content {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: 500;
+  font-size: 14px;
+}
