--- a/src/app/Restock/asset-and-resource-management/pages/supplier-overview/supplier-overview.component.css
+++ b/src/app/Restock/asset-and-resource-management/pages/supplier-overview/supplier-overview.component.css
@@ -1,31 +1,51 @@
-.content {
-  padding: 30px;
+.supplier-container {
+  padding: 24px;
+  margin: 0 2rem 0 2rem;
+  /* height: 100vw; */
 }
 
-.header {
+.text-sales {
+  font-size: 23px;
+  font-weight: 400;
+}
+
+.supplier-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
 }
 
-.add-btn {
-  background-color: #4F8A5B;
-  color: white;
-  border-radius: 5px;
-  padding: 8px 16px;
+.new-supplier-btn {
+  background-color: #4F8A5B !important;
+  color: white !important;
+  border-radius: 2px;
+  padding: 15px;
+}
+
+.btn-content {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
   font-weight: 500;
-  border: 0;
+  font-size: 14px;
+}
+
+mat-divider {
+  margin-top: 2rem;
 }
 
 .empty-state {
   text-align: center;
-  margin-top: 4rem;
+  margin-top: 40px;
+  color: #7f8c8d;
 }
 
-.empty-state img {
-  width: 300px;
-  margin-top: 1rem;
+.supplier-icon {
+  width: 100%;
+  height: 100%;
+  font-size: 160px;
+  color: #7f8c8d;
 }
 
 .table-wrapper table {
