--- a/src/app/Restock/asset-and-resource-management/pages/supplier-overview/supplier-overview.component.html
+++ b/src/app/Restock/asset-and-resource-management/pages/supplier-overview/supplier-overview.component.html
@@ -1,13 +1,19 @@
-<div class="content">
-<div class="header">
-  <h2>Suppliers</h2>
-  <button mat-flat-button class="add-btn" (click)="openAddSupplierModal()">ADD +</button>
+<div class="supplier-container">
+  <div class="supplier-header">
+    <h2 class="supplier-text">Suppliers</h2>
+  <button mat-raised-button class="new-supplier-btn" (click)="openAddSupplierModal()">
+    <span class="btn-content">
+      ADD<mat-icon>control_point</mat-icon>
+    </span>
+  </button>
 </div>
+
+  <mat-divider></mat-divider>
 
 <!-- No suppliers added yet -->
 <div *ngIf="!hasSuppliers" class="empty-state">
   <p>Currently you have no suppliers added, please add new suppliers to be able to manage them from this section.</p>
-  <img src="#" alt="No suppliers">
+  <mat-icon class="supplier-icon">groups</mat-icon>
 </div>
 
 <!-- Table of suppliers -->
