feat(sales): adding control_point icon

--- a/src/app/Restock/service-operation-and-monitoring/pages/sales/sales.component.html
+++ b/src/app/Restock/service-operation-and-monitoring/pages/sales/sales.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <!-- Mostrar el componente si la bandera es true -->
-<app-register-sales *ngIf="mostrarRegistroVenta" (cerrar)="mostrarRegistroVenta = false"
+<app-register-sales *ngIf="mostrarRegistroVenta" (cerrar)="closeModal()"
     (registersale)="onRegisterSale($event)"></app-register-sales>
 
 <app-sale-confirmation *ngIf="mostrarSaleConfirmation"
