feat(sales): adding control_point icon

--- a/src/app/Restock/service-operation-and-monitoring/pages/sales/sales.component.html
+++ b/src/app/Restock/service-operation-and-monitoring/pages/sales/sales.component.html
@@ -4,7 +4,7 @@
         <button mat-raised-button color="primary" class="nueva-venta-btn" (click)="toggleRegistroVenta()">
             <span class="btn-content">
                 NEW SALE
-                <mat-icon>add_circle</mat-icon>
+                <mat-icon>control_point</mat-icon>
             </span>
         </button>
     </div>
