feat(navbar): adding navbar

--- a/src/app/public/components/navbar/navbar.component.html
+++ b/src/app/public/components/navbar/navbar.component.html
@@ -1,3 +1,6 @@
-<div class="navbar">
-    <p class="content">navbar works!</p>
+<div class="navbar-container">
+    <div class="navbar">
+        <mat-icon class="icon">person</mat-icon>
+        <mat-icon class="icon">more_vert</mat-icon>
+    </div>
 </div>
