--- a/src/app/public/components/navbar/navbar.component.css
+++ b/src/app/public/components/navbar/navbar.component.css
@@ -1,17 +1,24 @@
-.navbar {
+.navbar-container {
     position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 64px;
-    background-color: rgba(204, 201, 201, 0);
-    z-index: 1000;
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    padding: 0 16px;
+    top: 20px;
+    left: 94%;
+    transform: translateX(-50%);
+    z-index: 100;
 }
 
-.content {
-    color: rgb(176, 170, 170);
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70px;
+    height: 44px;
+    background-color: #f1f2f3;
+    border-radius: 40px;
+    padding: 0 20px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.icon {
+    font-size: 24px;
+    color: #333;
 }
