--- a/src/app/Restock/asset-and-resource-management/pages/supplier-detail/supplier-detail.component.css
+++ b/src/app/Restock/asset-and-resource-management/pages/supplier-detail/supplier-detail.component.css
@@ -30,13 +30,6 @@
   background-color: #4F8A5B !important;
   color: white !important;
   border-radius: 50px;
-  padding: 0px;
+  padding: 0;
 }
 
-.btn-content {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  font-weight: 500;
-  font-size: 14px;
-}
