--- a/src/app/Restock/asset-and-resource-management/components/supplier-summary/supplier-summary.component.html
+++ b/src/app/Restock/asset-and-resource-management/components/supplier-summary/supplier-summary.component.html
@@ -1,7 +1,7 @@
 <div class="summary-container">
   <div class="column image-column">
     <h4>{{ supplier.name }}</h4>
-    <img src="#" alt="Supplier image" />
+    <img src="./assets/img-summary-supplier.png" alt="Supplier image"/>
   </div>
 
   <div class="column info-column">
