--- a/src/app/Restock/Analytics/pages/analytics-overview/analytics-overview.component.html
+++ b/src/app/Restock/Analytics/pages/analytics-overview/analytics-overview.component.html
@@ -12,8 +12,8 @@
 
   <!-- Fila 2: Frequent customers -->
   <div class="row2">
-    <div class="placeholder-widget">
-      [ Frequent Customers Widget - coming soon ]
+    <div class="widget-frequent">
+      <app-supplier-frequent-customers-widget />
     </div>
   </div>
 
