--- a/src/app/Restock/Analytics/components/supplier-account-widget/supplier-account-widget.component.css
+++ b/src/app/Restock/Analytics/components/supplier-account-widget/supplier-account-widget.component.css
@@ -26,7 +26,7 @@
 .amount {
   font-size: 24px;
   font-weight: bold;
-  color: #4F8A5B; /* mismo verde usado en tus botones */
+  color: #4F8A5B;
   margin: 0;
 }
 
