--- a/src/app/Restock/service-operation-and-monitoring/pages/sales/sales.component.html
+++ b/src/app/Restock/service-operation-and-monitoring/pages/sales/sales.component.html
@@ -11,12 +11,58 @@
 
     <mat-divider></mat-divider>
 
-    <div class="ventas-empty">
+    <div *ngIf="showHistorySalesAddedinInventory==false" class="ventas-empty">
         <p class="ventas-text">
             You currently have no recorded sales. Enter your sales here to keep your inventory up to date.
         </p>
         <mat-icon class="ventas-icon">room_service</mat-icon>
     </div>
+
+
+    <div *ngIf="showHistorySalesAddedinInventory ==true">
+        <div class="flex-title-history-sales">
+            <mat-icon>history</mat-icon>
+            <p>History of sales updated in inventory</p>
+        </div>
+
+        <p class="subtitle">Registered sales that have already deducted supplies from inventory</p>
+        <mat-form-field appearance="outline" class="filter-field">
+            <mat-label>Search for sale by code</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Ej. Punto Limon" />
+        </mat-form-field>
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" class="full-width-table">
+                <!-- Columnas -->
+                <ng-container matColumnDef="code">
+                    <th mat-header-cell *matHeaderCellDef> Code </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.code }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="plates">
+                    <th mat-header-cell *matHeaderCellDef> Quantity of plates </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.quantity_plates }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="additonal_supplies">
+                    <th mat-header-cell *matHeaderCellDef> Quantity of additional supplies </th>
+                    <td mat-cell *matCellDef="let row"> {{ row.quantity_additonal_supplies }} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef> Actions </th>
+                    <td mat-cell *matCellDef="let row"> <mat-icon>description</mat-icon> </td>
+                </ng-container>
+
+                <!-- Filas -->
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+        <div class="flex">
+            <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
+        </div>
+    </div>
+
 </div>
 
 <!-- Mostrar el componente si la bandera es true -->
