--- a/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
+++ b/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
@@ -4,7 +4,7 @@
       <div class="placeholder-widget">Pending Orders</div>
     </div>
     <div class="widget-last-alerts"> <!-- Próximamente: componente de last alerts -->
-      <app-restaurant-alerts-widget />
+      <div class="placeholder-widget">Last Alerts</div>
     </div>
   </div> <!-- Row 2: Carrusel de Clientes Frecuentes -->
   <div class="row-2">
