feat(sidebar): update sidebar dimensions and adjust styles for improved layout

--- a/src/app/public/components/sidebar/sidebar.component.css
+++ b/src/app/public/components/sidebar/sidebar.component.css
@@ -1,9 +1,8 @@
 .sidebar {
-  height: 50vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: #fdfdfe;
+  background: #ffffff;
   padding: 16px;
 }
 
@@ -105,7 +104,7 @@ a.menu-item {
 
 
 .language-switcher {
-  margin-top: 6rem;
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
 }
