--- a/src/app/public/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.css
@@ -9,11 +9,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 .content-wrapper {
   padding: 24px;
-  background-color: #fff;
+  background-color: #ffff;
   min-height: calc(100vh - 64px);
 }
 .principal-image {
@@ -21,6 +21,5 @@
     max-width: 100%;
     height: auto;
     object-fit: cover;
-    margin-bottom: 32px;
 }
 
