feat(sales): fixing styles.css

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -3,8 +3,7 @@
 @use '@angular/material' as mat;
 
 html {
-  @include mat.theme((color: (theme-type: light),
-      typography: Poppins,
+  @include mat.theme((typography: Poppins,
       density: 0,
     ));
 }
