--- a/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
+++ b/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.html
@@ -4,12 +4,12 @@
       <div class="placeholder-widget">Pending Orders</div>
     </div>
     <div class="widget-last-alerts"> <!-- Próximamente: componente de last alerts -->
-      <div class="placeholder-widget">Last Alerts</div>
+      <app-restaurant-alerts-widget/>
     </div>
   </div> <!-- Row 2: Carrusel de Clientes Frecuentes -->
   <div class="row-2">
     <div class="widget-carousel"> <!-- Próximamente: componente de carrusel -->
-      <div class="placeholder-widget">Frequent Customers Carousel</div>
+      <app-restaurant-last-supplies-widget/>
     </div>
   </div>
 </div>
