fix(restaurant-analytics-alert): fix alert button width.

--- a/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.html
@@ -14,7 +14,7 @@
         <button mat-flat-button
                 [ngClass]="{
               'low-stock': alert.status === 'Low stock',
-              'max-stock': alert.status === 'Maximum stock'
+              'max-stock': alert.status === 'Max stock'
             }">
           {{ alert.status }}
         </button>
