fix(order-entity): add order entity.

--- a/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.html
@@ -1,4 +1,5 @@
-<div class="carousel-container"><h3>Latest Ingredients</h3>
+<h3 class="widget-title">Latest Ingredients</h3>
+<div class="carousel-container">
   <div class="carousel">
     <button mat-icon-button (click)="prev()" [disabled]="currentIndex === 0">
       <mat-icon>chevron_left</mat-icon>
