--- a/src/app/public/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.css
@@ -1,10 +1,15 @@
 .layout-container {
-  height: 100vh;
+  height: 100%;
 }
 .sidebar-container {
   width: 300px;
   height: 100%;
 }
+
+.mat-drawer {
+  background-color: white;
+}
+
 .main-content {
   height: 100%;
   display: flex;
@@ -14,7 +19,6 @@
 .content-wrapper {
   padding: 24px;
   background-color: #ffff;
-  min-height: calc(100vh - 64px);
 }
 .principal-image {
     width: 100%;
