--- a/src/app/public/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.css
@@ -11,7 +11,6 @@
   background-color: white;
 }
 
-
 .main-content {
   height: 100%;
   display: flex;
@@ -22,6 +21,7 @@
 .content-wrapper {
   padding: 24px;
   background-color: #ffff;
+}
 
 .principal-image {
   width: 100%;
