fix(restaurant-analytics-pending-order): fix background color.

--- a/src/app/Restock/Analytics/components/restaurant-pending-orders-widget/restaurant-pending-orders-widget.component.css
+++ b/src/app/Restock/Analytics/components/restaurant-pending-orders-widget/restaurant-pending-orders-widget.component.css
@@ -10,7 +10,9 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
 }
-
+mat-table {
+  background-color: white;
+}
 mat-header-cell {
   font-weight: bold;
   font-size: 12px;
